Added Portfolio page

--- a/views/project.hbs
+++ b/views/project.hbs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {{> header}}
+      {{> header}}
   </head>
   <body>
     <h1>{{pageTitle}}</h1>
-    <p>Some text here</p>
+    <p>Project Portfolio</p>
   </body>
   {{> footer}}
 </html>
