--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>{{pageTitle}}</h1>
-    <p>Some text here</p>
+    <p>This is the homepage of the node app</p>
   </body>
   {{> footer}}
 </html>
